--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,19 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar color="dark">
+    <ion-title style="text-align: center">
+       Native
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <b><h1 style="text-align: center">Ionic Native Liabraries</h1></b>
+<button id="lol" ion-button black (click)="onMedia()"> <img id="so" width="100%" height="100%" src="../../assets/imgs/cam.jpg"></button>
+<button  id="lol" ion-button black (click)="onAudio()"><img id="so" width="100%" height="100%" src="../../assets/imgs/audio.jpg"></button>
+<button  id="lol" ion-button black (click)="onVideo()"><img id="so" width="100%" height="100%" src="../../assets/imgs/video_icon.jpg"></button>
 </ion-content>
